# MPSBoost

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-Hans.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.zh-Hans.md  LICENSE  README.md  README.zh-Hans.md  RELEASE_AUDIT.md  RELEASE_AUDIT.zh-Hans.md  mps_boost_skill.md  mps_boost_skill.zh-Hans.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
ai-skills/: mps_boost_skill.md  mps_boost_skill.zh-Hans.md
assets/icons/: README.md  README.zh-Hans.md
benchmarks/: datasets.py  report.py  runner.py
benchmarks/results/: s4-m2-ultra-py313.json  s4-m2-ultra-py313.md  s4-m2-ultra-py313.zh-Hans.md  s6-m2-ultra-py313.json  s6-m2-ultra-py313.md  s6-m2-ultra-py313.zh-Hans.md
docs/: CHANGELOG.md  CHANGELOG.zh-Hans.md  KNOWN_ISSUES_0.5.0.md  KNOWN_ISSUES_0.5.0.zh-Hans.md  KNOWN_ISSUES_1.0.0.md  KNOWN_ISSUES_1.0.0.zh-Hans.md  PERFORMANCE_0.5.0.md  PERFORMANCE_0.5.0.zh-Hans.md  PERFORMANCE_1.0.0.md  PERFORMANCE_1.0.0.zh-Hans.md  RELEASE_AUDIT_0.1.0a0.md  RELEASE_AUDIT_0.1.0a0.zh-Hans.md  RELEASE_AUDIT_0.2.0.md  RELEASE_AUDIT_0.2.0.zh-Hans.md  RELEASE_AUDIT_0.2.0a0.md  RELEASE_AUDIT_0.2.0a0.zh-Hans.md  RELEASE_AUDIT_0.2.0b0.md  RELEASE_AUDIT_0.2.0b0.zh-Hans.md  RELEASE_AUDIT_0.2.0rc0.md  RELEASE_AUDIT_0.2.0rc0.zh-Hans.md  RELEASE_AUDIT_0.3.0.md  RELEASE_AUDIT_0.3.0.zh-Hans.md  RELEASE_AUDIT_0.4.0.md  RELEASE_AUDIT_0.4.0.zh-Hans.md  RELEASE_AUDIT_0.5.0.md  RELEASE_AUDIT_0.5.0.zh-Hans.md  RELEASE_AUDIT_1.0.0.md  RELEASE_AUDIT_1.0.0.zh-Hans.md
docs-site/: mkdocs.yml  requirements.txt
docs-site/docs/en/: index.md
docs-site/docs/en/development/: docs-site.md
docs-site/docs/en/docs-site-prd/: README.md
docs-site/docs/en/getting-started/: install.md  quick-start.md
docs-site/docs/en/model-families/: anomaly-ranking.md  catboost-like.md  forests.md  gradient-boosting.md
docs-site/docs/en/prd/: github_action_prd.zh-Hans.md  mkdocs_prd.zh-Hans.md
docs-site/docs/en/project/: CHANGELOG.md  KNOWN_ISSUES_0.5.0.md  KNOWN_ISSUES_1.0.0.md  PERFORMANCE_0.5.0.md  PERFORMANCE_1.0.0.md  RELEASE_AUDIT.md  (+10 more)
docs-site/docs/zh-Hans/: index.md
docs-site/specs/: README.md  README.zh-Hans.md  github_action_prd.md  github_action_prd.zh-Hans.md  mkdocs_prd.md  mkdocs_prd.zh-Hans.md
include/mpsboost/: backend.hpp  binned_dataset.hpp  objective.hpp  trainer.hpp  tree.hpp  version.hpp.in
specs/: AGENTS.md  AGENTS.zh-Hans.md  README.md  README.zh-Hans.md  constitution.md  constitution.zh-Hans.md  legacy-issues.md  legacy-issues.zh-Hans.md  project-tree.md  project-tree.zh-Hans.md  tasks.md  tasks.zh-Hans.md
specs/docs-site/: README.zh-Hans.md
specs/v1-mps-histogram-engine/: prd.md  prd.zh-Hans.md
specs/v1-mps-histogram-engine/modules/: 01-python-api.md  02-data-quantization.md  02-data-quantization.zh-Hans.md  03-training-core.md  04-mps-backend.md  04-mps-backend.zh-Hans.md  05-cache.md  05-cache.zh-Hans.md  06-model-io.md  06-model-io.zh-Hans.md  07-quality.md  07-quality.zh-Hans.md  08-packaging-release.md
specs/v2-arboretum-implementation/: native-multiclass-softmax.md  native-multiclass-softmax.zh-Hans.md  prd.md  prd.zh-Hans.md
specs/v3-real-world-tests/: prd.md  prd.zh-Hans.md
src/core/: binned_dataset.cpp  binned_dataset_internal.cpp  binned_dataset_internal.hpp  binned_dataset_serialization.cpp  multiclass_trainer.cpp  objective.cpp  trainer.cpp  trainer_internal.hpp  tree.cpp  tree_histogram.cpp  tree_interactions.cpp  tree_internal.hpp  tree_leafwise.cpp  tree_monotonic.cpp  tree_split.cpp  tree_structure.cpp
src/cpu/: reference_backend.cpp
src/io/: model_file_io.cpp  model_format.cpp  model_format_internal.hpp  model_payload.cpp
src/mps/: metal_context.mm  mps_backend.mm  mps_backend_internal.hpp  mps_context.mm  mps_gradients.mm  mps_histogram.mm  mps_split_partition.mm
src/mps/kernels/: gradients.metal  histogram.metal  partition.metal  smoke.metal  split_scan.metal
src/mpsboost/: __init__.py  _api.py  _cache.py  capabilities.py  categorical.py  device_policy.py  diagnostics.py  estimator.py  families.py  matrix.py  monitoring.py  portable_backend.py  randomization.py  shap.py
src/mpsboost/estimators/: __init__.py  anomaly.py  base.py  catboost_like.py  classification.py  errors.py  forest.py  forest_io.py  forest_public.py  forest_sampling.py  importance.py  mixins.py  model_state.py  multiclass.py  prediction.py  ranking.py  single_tree.py
src/python/: binding_backend.cpp  binding_dataset.cpp  binding_dataset_tools.cpp  binding_helpers.cpp  binding_helpers.hpp  binding_model.cpp  binding_objective.cpp  binding_registrations.hpp  bindings.cpp
tests/: test_preview_api.py
tests/integration/: test_cache_stability.py  test_classifier.py  test_extra_trees.py  test_industrial_semantics_parity.py  test_native_backend.py  test_random_forest.py  test_regressor.py
tests/metal/: test_mps_histogram.py  test_mps_hot_path.py
tests/packaging/: test_public_api.py
tests/real_world/: README.md  README.zh-Hans.md  REPORT.md  REPORT.zh-Hans.md  __init__.py  dataset_matrix.py  download_datasets.py  test_advanced_objectives.py  test_anomaly_ranking.py  test_builtin_numeric_datasets.py  test_california_housing.py  test_covertype_subset.py  test_cpu_baselines.py  test_external_opt_in_datasets.py  test_model_family_stability.py
tests/unit/: test_cache.py  test_categorical_features.py  test_cpu_tree.py  test_cpu_tree_leafwise.py  test_cpu_tree_missing.py  test_device_policy.py  test_diagnostics.py  test_estimator.py  test_estimator_anomaly_ranking.py  test_estimator_base.py  test_estimator_catboost_like.py  test_estimator_classification.py  test_estimator_forest.py  test_estimator_importance.py  test_estimator_multiclass.py  test_estimator_single_tree.py  test_interaction_constraints.py  test_model_io.py  test_model_io_missing.py  test_monitoring.py  test_monotonic_constraints.py  test_objective.py  test_portable_backend.py  test_quantization.py  test_randomization.py  test_regularization_controls.py  test_shap_integration.py  test_sklearn_compat.py  test_trainer.py  test_tree_families.py
(+99 files in other folders)
