[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "mpsboost"
version = "0.3.0"
description = "Lightweight gradient boosting for Apple Silicon with an MPS/Metal backend"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "MPSBoost contributors" },
]
keywords = [
  "apple-silicon",
  "catboost",
  "c-plus-plus",
  "extra-trees",
  "gbdt",
  "gradient-boosting",
  "machine-learning",
  "metal",
  "mps",
  "random-forest",
  "tree-models",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
cuda = [
  "xgboost>=2",
]
shap = [
  "shap>=0.45",
]
sklearn = [
  "scikit-learn>=1.4",
]
test = [
  "numpy>=1.24",
  "pytest>=8",
  "scikit-learn>=1.4",
]
xgboost = [
  "xgboost>=2",
]

[project.urls]
Homepage = "https://github.com/billzi2016/MPSBoost"
Repository = "https://github.com/billzi2016/MPSBoost"
Issues = "https://github.com/billzi2016/MPSBoost/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/mpsboost"]
sdist.include = [
  "CMakeLists.txt",
  "include/mpsboost/*.hpp",
  "include/mpsboost/*.in",
  "src/core/*.cpp",
  "src/cpu/*.cpp",
  "src/io/*.cpp",
  "src/mps/*.mm",
  "src/mps/kernels/*.metal",
  "src/python/*.cpp",
  "benchmarks/*.py",
]

[tool.scikit-build.cmake]
build-type = "Release"
version = ">=3.25"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "gpu: tests that require a real usable Metal device on Apple Silicon",
]
